030-software/fluxcd/apps/stackedit/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stackedit
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: stackedit
  template:
    metadata:
      labels:
        app: stackedit
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: stackedit
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: stackedit
      containers:
        - name: stackedit
          image: benweet/stackedit:v5.15.4@sha256:b1505e5a1a56f8cbe395dd1989aa50dfa3773726c8ae763b69983d523734b0ce
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 100m
            limits:
              memory: 128Mi
